--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ go:
 
 before install:
   - go get github.com/kardianos/govendor/...
-  - go get -u github.com/golang/lint/golint
+  - go get -u github.com/golang/lint/golint/...
