--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ go:
   - 1.9.x
   - 1.10.x
 
-before install:
-  - go get github.com/kardianos/govendor/...
+before_install:
+  - go get -u github.com/kardianos/govendor
+  - go get -u github.com/golang/lint/golint
