--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ go:
 before_install:
   - go get -u github.com/kardianos/govendor
   - go get -u github.com/golang/lint/golint
+
+install:
+  - echo $PATH
