--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,9 @@ before_install:
   - go get -u github.com/kardianos/govendor
   - go get -u github.com/golang/lint/golint
 
+env:
+  - CONSUL_VERSION=0.8.5 CONSUL_DOWNLOAD_URL=https://releases.hashicorp.com/consul/${CONSUL_VERSION}/consul_${CONSUL_VERSION}_linux_arm64.zip
 install:
-  - echo $PATH
+  - wget ${CONSUL_DOWNLOAD_URL}
+  - tar -xzf consul_${CONSUL_VERSION}_linux_arm64.zip
+  - cp ./consul /usr/bin/consul
