--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ env:
 install:
   - wget ${CONSUL_DOWNLOAD_URL}
   - unzip ./consul_${CONSUL_VERSION}_linux_arm64.zip
-  - cp ./consul /usr/local/bin/consul
+  - cp ./consul ${HOME}/gopath/bin/consul
