try to install consul

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,4 @@ install:
   - wget ${CONSUL_DOWNLOAD_URL}
   - unzip ./consul_${CONSUL_VERSION}_linux_arm64.zip
   - cp ./consul ${HOME}/gopath/bin/consul
+  - chmod 777 ${HOME}/gopath/bin/consul
