--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ before_install:
 
 env:
   - CONSUL_VERSION=0.8.5 CONSUL_DOWNLOAD_URL=https://releases.hashicorp.com/consul/${CONSUL_VERSION}/consul_${CONSUL_VERSION}_linux_arm64.zip
+  - GOOS=linux
+  - GOARCH=amd64
 install:
   - wget ${CONSUL_DOWNLOAD_URL}
   - unzip ./consul_${CONSUL_VERSION}_linux_arm64.zip
   - cp ./consul ${HOME}/gopath/bin/consul
-  - chmod 777 ${HOME}/gopath/bin/consul
