--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ go:
 
 before_install:
   - go get -u github.com/kardianos/govendor
-  - go get -u github.com/golang/lint/golint
+  - go get -u golang.org/x/lint/golint
 
 env:
   - CONSUL_VERSION=1.3.1 CONSUL_DOWNLOAD_URL=https://releases.hashicorp.com/consul/${CONSUL_VERSION}/consul_${CONSUL_VERSION}_linux_amd64.zip
