--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,33 @@
 language: go
 
-go:
-  - 1.9.x
-  - 1.10.x
-  - 1.11.x
-  - 1.12.x
+matrix:
+  include:
+    - go: 1.9.x
+    - go: 1.10.x
+    - go: 1.11.x
+      env: GO111MODULE=on
+    - go: 1.12.x
+      env: GO111MODULE=on
 
 before_install:
-  - go get -u github.com/kardianos/govendor
+  - if [[ "${GO111MODULE}" = "on" ]]; then mkdir "${HOME}/go"; export GOPATH="${HOME}/go"; else go get -u github.com/kardianos/govendor fi
   - go get -u golang.org/x/lint/golint
 
 env:
   - CONSUL_VERSION=1.5.2 CONSUL_DOWNLOAD_URL=https://releases.hashicorp.com/consul/${CONSUL_VERSION}/consul_${CONSUL_VERSION}_linux_amd64.zip
 
 install:
+  - if [[ "${GO111MODULE}" = "on" ]]; then go mod download; else make vendor; fi
+  - if [[ "${GO111MODULE}" = "on" ]]; then export PATH="${GOPATH}/bin:${GOROOT}/bin:${PATH}"; fi
   - wget ${CONSUL_DOWNLOAD_URL}
   - unzip ./consul_${CONSUL_VERSION}_linux_amd64.zip
-  - cp ./consul ${HOME}/gopath/bin/consul
+  - cp ./consul ${GOPATH}/bin/consul
+
+go_import_path: github.com/dmitriyGarden/consul-leader-election
+
+script:
+  - make lint
+  - make test
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
