--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,8 @@ matrix:
 before_install:
   - if [[ "${GO111MODULE}" = "on" ]]; then mkdir "${HOME}/go"; export GOPATH="${HOME}/go"; else go get -u "github.com/kardianos/govendor"; fi
   - go get -u golang.org/x/lint/golint
-
-env:
-  - CONSUL_VERSION=1.5.2 CONSUL_DOWNLOAD_URL=https://releases.hashicorp.com/consul/${CONSUL_VERSION}/consul_${CONSUL_VERSION}_linux_amd64.zip
+  - export CONSUL_VERSION=1.5.2
+  - export CONSUL_DOWNLOAD_URL=https://releases.hashicorp.com/consul/${CONSUL_VERSION}/consul_${CONSUL_VERSION}_linux_amd64.zip
 
 install:
   - if [[ "${GO111MODULE}" = "on" ]]; then go mod download; else make vendor; fi
