--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ matrix:
       env: GO111MODULE=on
     - go: 1.12.x
       env: GO111MODULE=on
+    - go: 1.13.x
+      env: GO111MODULE=on
 
 before_install:
   - if [[ "${GO111MODULE}" = "on" ]]; then mkdir "${HOME}/go"; export GOPATH="${HOME}/go"; else go get -u "github.com/kardianos/govendor"; fi
