--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ matrix:
       env: GO111MODULE=on
     - go: 1.15.x
       env: GO111MODULE=on
+    - go: 1.16.x
+      env: GO111MODULE=on
 
 before_install:
   - go get -u golang.org/x/lint/golint
